--- a/SourceCode/im/src/assets/css/gxIndex.css
+++ b/SourceCode/im/src/assets/css/gxIndex.css
@@ -106,7 +106,7 @@ a:hover{color:#C20005; text-decoration:none;}
 .socket-face .face{width: 18px;height: 18px;background-position: 0 -35px;margin-left: 20px;margin-top: 10px;}
 .socket-face .price {width: 20px;height: 16px;background-position: 0 -53px;margin-left: 6px;position: relative;overflow: hidden;display: inline-block;cursor: pointer;z-index: 9999}
 .socket-face .price  input {position: absolute;left: -70px;top: 0;cursor: pointer;z-index: 9999;padding-top: 20px;}
-.face-box{position: absolute;width: 360px;/* height: 150px; */border:#DFE6F6 solid 1px;bottom: 40px;display: none;background: #fff}
+.face-box{position: absolute;width: 360px;/* height: 150px; */border:#DFE6F6 solid 1px;bottom: 40px;/* display: none; */background: #fff}
 .face-box ul li{width: 28px;height: 27px;border:#fff solid 1px;float: left;text-align: center;padding-top: 1px;cursor: pointer;}
 .face-box ul li:hover{border: #DFE6F6 solid 1px;}
 
