--- a/SourceCode/im/src/assets/css/gxIndex.css
+++ b/SourceCode/im/src/assets/css/gxIndex.css
@@ -115,6 +115,8 @@ a:hover{color:#C20005; text-decoration:none;}
 .not-tell.none{display: none}
 /* 上传图标 */
 .socket-face .fileInput{font-size: 12px;position:absolute;right:0;top:0;opacity: 0;filter:alpha(opacity=0);cursor:pointer;}
+.socket-shop-logo{display: block;float: left;position: relative;width: 44px;height: 40px;}
+.socket-shop-logo img{width: 40px;height: 40px;border-radius: 50%;position: absolute;margin-top: 8px;}
 
 .send-message{
   width: 100%;
